# yak_demos

./: README.md  yak_demos.rosinstall
yak_demos/: CMakeLists.txt  package.xml
yak_ur3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
yak_ur3_moveit_config/config/: controllers.yaml  fake_controllers.yaml  kinematics.yaml  yak_ur3_workcell.srdf
yak_ur3_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_planning_execution.launch.autosave  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  yak_ur3_workcell_moveit_controller_manager.launch.xml
yak_ur3_support/: CMakeLists.txt  package.xml
yak_ur3_support/launch/: load_yak_ur3_workcell.launch  test_yak_ur3_workcell.launch  yak_ur3_demo.launch
yak_ur3_support/urdf/: yak_ur3_workcell.urdf.xacro  yak_ur3_workcell.xacro
yak_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
yak_ur5_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  stomp_config.yaml  yak_ur3_workcell.srdf  yak_ur5_workcell.srdf
yak_ur5_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  warehouse.launch  (+8 more)
yak_ur5_support/: CMakeLists.txt  package.xml
(+6 files in other folders)
